# ximreader

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml  python-publish.yml  test.yml
examples/: test.py  ximview.py
src/: ximreader.cpp
ximreader/: ximReader.py
